Fixes an issue where the button area is too large when a word in the content is very long, e.g. an email address.

--- a/wcfsetup/install/files/style/bbcode/quote.scss
+++ b/wcfsetup/install/files/style/bbcode/quote.scss
@@ -84,7 +84,7 @@
 	grid-template-areas:
 		"icon    title   buttons"
 		"content content content";
-	grid-template-columns: 24px auto min-content;
+	grid-template-columns: 24px auto minmax(0, min-content);
 	margin: 0;
 }
 
